add video of me climbing to start and finish a climb section

--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@ updated by JY on July 25, 2025 at 7:45 PM
 					<p>To start a climb, you will typically begin with both hands on the starting holds, which are usually marked with tape or little token. If only one hold is marked both hands start on that hold, if two holds each hand gets it's own hold, and if 3 or 4 holds are marked at least one limb must go on each of one of those holds. If there are no taped holds for your feet you may place your feet anywhere on the wall. Once you have established(your hands/feet are on starting holds and feet are not on the ground) you may proceed with your climb.</p>
 					<p> To finish a climb, you will need to place both hands on the top hold marked with tape or tokens for 3 seconds in a stable position. If there are no marked holds you will need to reach the top lip of the wall with both hands for 3 seconds in a stable position, or climb up and over the top lip of the wall. Once you have reached the top holds, you can either jump down onto the crash pad or climb down carefully. Sometimes gyms put up downclimb holds that are easy to hold and typically gray to help assist with getting down the wall</p>
 					<p>Before getting on your climb, try to check the route and plan your moves. Look for holds and foot placements that will help you ascend the wall before climbing. This is called route reading and will conserve wasted energy on the wall due to not knowing where to go or what to do. In addition as you learn new techniques try to plan those techniques into your climbs.</p>
+					<h3>Video of Me Starting and Finishing a Climb</h3>
+					<video controls>
+						<source src="vid/bouldering_video.mp4" type="video/mp4">
+						<p>Your browser does not support the video tag.</p>
+					</video>
 					<hr>
 				</section>
 				<section id = "hold-types">
