small fix to w3c icon

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ updated by JY on July 25, 2025 at 7:45 PM
 		<footer>
 			<p>&copy; 2025 Bouldering Bros. All rights reserved.</p>
 			<p><a href="https://jigsaw.w3.org/css-validator/check/referer">
-					<img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" /></a></p>
+					<img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p>
 		</footer>
 	</body>
 </html>
