add internal citations for images in html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ updated by JY on July 25, 2025 at 7:45 PM
 	<body>
 		<!--Header, logo-->
 		<header class = "main-header">
+			<!--image created at chat.open.ai.com-->
 			<a href="./">
 				<img class="logo" src="img/boulder_bros_logo.png" alt="Logo for Boulder Bros Blog" width="100" height="100">
 			</a>
@@ -136,6 +137,7 @@ updated by JY on July 25, 2025 at 7:45 PM
 				<section id = "starting-and-finishing-a-climb">
 					<h2>Starting and Finishing a Climb</h2>
 					<figure class="bouldering-diagram">
+						<!--image found at https://projectclimbing.ca/abbotsford/new-climbers/-->
 						<img src="img/bouldering_diagram.jpg" alt="Starting and Finishing a Climb">
 						<figcaption>Diagram of a Boulder Probelm from <a href = "https://projectclimbing.ca/abbotsford/new-climbers/">Project Abbotsford Website</a></figcaption>
 					</figure>
@@ -154,6 +156,7 @@ updated by JY on July 25, 2025 at 7:45 PM
 				<section id = "hold-types">
 					<h2>Types of Climbing Holds</h2>
 					<figure class="holds-image">
+						<!--image found at https://displate.com/displate/7158153-->
 						<img src="img/climbing_holds.avif" alt="Types of Climbing Holds">
 						<figcaption>Common types of climbing holds by <a href = "https://displate.com/displate/7158153">UNIKORN</a></figcaption>
 					</figure>
@@ -182,9 +185,8 @@ updated by JY on July 25, 2025 at 7:45 PM
 		</main>
 		<footer>
 			<p>&copy; 2025 Bouldering Bros. All rights reserved.</p>
-			<p><a href="https://jigsaw.w3.org/css-validator/check/referer">
-					<img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p>
+			<!--image found at https://www.w3.org/QA/Tools/Icons-->
+			<p><a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p>
 		</footer>
 	</body>
 </html>
-
