--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ updated by JY on July 25, 2025 at 7:45 PM
 					<ul>
 						<li>Try to warm up before climbing to prevent injury.</li>
 						<li>Learn how to fall safely by tucking in your arms to prevent injuring them, landing on both your feet and then rolling back to disperse the force. I reccomend practicing at shorter heights and then slowly increasing the height before you fall to gain some confidence.</li>
-						<li>Be aware of your surroundings. don't walk under anyone climbing, make sure you clear the area of anything below your fall zone, and when you get on a climb make sure it doesn't cross paths with someone else already on the wall</li>
+						<li>Be aware of your surroundings. Don't walk under anyone climbing, make sure you clear the area of anything below your fall zone, and when you get on a climb make sure it doesn't cross paths with someone else already on the wall</li>
 						<li>Know your limits and don't push yourself too hard. We want to be in control at all times on the wall, if when going for a move you feel like you might fail and aren't sure if you can land safely, don't go for that move.</li>
 					</ul>
 					<hr>
